--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>LEE YEE YONG</title>
+  <title>Ichi Umai</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -31,7 +31,8 @@
       <div class="col-xs-12">
         <h4>Opening hours:</h3>
         <p>Open daily except every 2nd and 4th Monday of each Month.</p>
-        <p>00:00AM - 23:59PM</p>
+        <p>11:30AM - 3:00PM</p>
+        <p>5:30AM - 9:30PM</p>
       </div>
     </div>
   </div>
