--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
   <div class="container-fluid text-center text-white">
     <div class="row">
       <div class="col-xs-12">
-        <h4>Opening hours:</h3>
+        <h4>Operating hours:</h3>
         <p>Open daily except every 2nd and 4th Monday of each Month.</p>
-        <p>11:30AM - 3:00PM</p>
-        <p>5:30AM - 9:30PM</p>
+        <p>11:30AM - 3:30PM (Last order: 3PM)</p>
+        <p>5:30PM - 9:30PM (Last order: 9PM)</p>
       </div>
     </div>
   </div>
