--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <title>Ichi Umai: Best Taste</title>
-  <link rel="shortcut icon" type="image/ico" href="ichiumai.ico"/>
+  <link rel="shortcut icon" type="image/x-icon" href="ichiumai.ico"/>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
