--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <header class="text-center pt-5 pb-3" style="background-color: #353736;">
   <!--<img src="./ichiumai.png" class="img-fluid" alt="ichiumaiLogo" />-->
-  <img src="./ichiumai.png" class="img-fluid" alt="ichiumaiLogo" srcset="./ichiumai.svg" height="305" width="300">
+  <img src="./ichiumai.png" class="img-fluid" alt="ichiumaiLogo" srcset="./ichiumai.svg" height="305" width="300" />
 </header>
 
 <div class="container-fluid text-center text-white">
