--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <div class="row">
     <div class="col-xs-12 p-5">
         <a class="btn btn-primary btn-lg" style="background-color: #cf3b45;" href="./ichiumaimenu.pdf#toolbar=0&navpanes=0&scrollbar=0" target="_blank role="button">Food Menu!</a>
+        <a class="btn btn-primary btn-lg" style="background-color: #cf3b45;" href="./ichiumaimenu.pdf#toolbar=0&navpanes=0&scrollbar=0" target="_blank role="button">Food Menu!</a><span class="badge badge-warning">New</span>
     </div>
   </div>
 </div>
