--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
 <div class="container-fluid text-center text-white">
   <div class="row">
     <div class="col-xs-12 p-5">
-        <a class="btn btn-primary btn-lg" style="background-color: #cf3b45;" href="./ichiumaimenu.pdf#toolbar=0&navpanes=0&scrollbar=0" target="_blank role="button">Food Menu!</a>
-        <a class="btn btn-primary btn-lg" style="background-color: #cf3b45;" href="./ichiumaimenu.pdf#toolbar=0&navpanes=0&scrollbar=0" target="_blank role="button">Food Menu!</a><span class="badge badge-warning">New</span>
+      <a class="btn btn-primary btn-lg" style="background-color: #cf3b45;" href="./ichiumaimenu.pdf#toolbar=0&navpanes=0&scrollbar=0" target="_blank role="button">Food Menu!</a>
+    </div>
+    <div class="col-xs-12 p-5">
+      <a class="btn btn-primary btn-lg" style="background-color: #cf3b45;" href="./ichiumaimenu.pdf#toolbar=0&navpanes=0&scrollbar=0" target="_blank role="button">Food Menu!</a>
+      <span class="badge position-absolute top-0 start-100 translate-middle bg-warning">NEW</span>  
     </div>
   </div>
 </div>
