--- a/index.html
+++ b/index.html
@@ -24,9 +24,14 @@
     <div class="col-xs-12 pt-5">
       <a class="btn btn-primary btn-lg" style="background-color: #cf3b45;" href="./ichiumaimenu.pdf#toolbar=0&navpanes=0&scrollbar=0" target="_blank role="button">Food Menu!</a>
     </div>
-    <div class="col-xs-12 pt-1 pb-5">
+    <div class="col-xs-12 pt-2 pb-5">
       <a class="btn btn-primary btn-lg" style="background-color: #cf3b45;" href="./ichiumaimenu.pdf#toolbar=0&navpanes=0&scrollbar=0" target="_blank role="button">Food Menu!</a>
       <span class="badge position-absolute top-0 start-100 translate-middle badge-danger">NEW</span>  
+    </div>
+    <div class="col-xs-12 pt-2 pb-5">
+      <button type="button" class="btn btn-dark position-relative">
+        Badge Top Right Corner <span class="badge position-absolute top-0 start-100 translate-middle bg-warning">823</span>
+      </button>
     </div>
   </div>
 </div>
