--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       <a class="btn btn-primary btn-lg" style="background-color: #cf3b45;" href="./ichiumaimenu.pdf#toolbar=0&navpanes=0&scrollbar=0" target="_blank role="button">Food Menu!</a>
     </div>
     <div class="col-xs-12 pt-2 pb-5">
-      <a class="btn btn-primary btn-lg" style="background-color: #cf3b45;" href="./ichiumaimenu.pdf#toolbar=0&navpanes=0&scrollbar=0" target="_blank role="button">Food Menu!</a>
-      <span class="badge position-absolute top-0 start-100 translate-middle badge-danger">NEW</span>  
+      <a class="btn btn-primary btn-lg" style="background-color: #cf3b45;" href="./ichiumaimenu.pdf#toolbar=0&navpanes=0&scrollbar=0" target="_blank role="button">Food Menu!<span class="badge position-absolute top-0 start-100 translate-middle bd-danger">NEW</span></a>
+      <!--<span class="badge position-absolute top-0 start-100 translate-middle bd-danger">NEW</span>-->
     </div>
     <div class="col-xs-12 pt-2 pb-5">
       <button type="button" class="btn btn-dark position-relative">
