--- a/index.html
+++ b/index.html
@@ -31,8 +31,13 @@
         </span>
     </div>
     <div class="col-xs-12 pt-2 pb-5">
-      <button type="button" class="btn btn-dark position-relative">
+      <button type="button" class="btn btn-dark position-relative" href="./ichiumaimenu.pdf#toolbar=0&navpanes=0&scrollbar=0" target="_blank">
         Food Menu
+      </button>
+    </div>
+    <div class="col-xs-12 pt-2 pb-5">
+      <button type="button" class="btn btn-dark position-relative" href="./ichiumaimenu.pdf#toolbar=0&navpanes=0&scrollbar=0" target="_blank">
+        Yusheng Menu
         <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
           NEW
           <span class="visually-hidden">unread messages</span>
