--- a/index.html
+++ b/index.html
@@ -25,10 +25,7 @@
       <a class="btn btn-dark btn-lg position-relative" href="./ichiumaimenu.pdf#toolbar=0&navpanes=0&scrollbar=0" target="_blank" role="button">Food Menu!</a>
     </div>
     <div class="col-xs-12 pt-2 pb-5">
-      <a class="btn btn-dark btn-lg position-relative" href="./ichiumaimenu.pdf#toolbar=0&navpanes=0&scrollbar=0" target="_blank" role="button">Food Menu!<span class="badge position-absolute top-0 start-100 translate-middle bd-danger">NEW</span></a>
-      <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-          NEW
-        </span>
+      <a class="btn btn-dark btn-lg position-relative" href="./ichiumaimenu.pdf#toolbar=0&navpanes=0&scrollbar=0" target="_blank" role="button">Yusheng Menu!<span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">NEW</span></a>
     </div>
     <div class="col-xs-12 pt-2 pb-5">
       <button type="button" class="btn btn-dark position-relative" href="./ichiumaimenu.pdf#toolbar=0&navpanes=0&scrollbar=0" target="_blank">
