--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 
 <div class="container-fluid text-center text-white">
   <div class="row">
-    <div class="col-xs-12 pt-5 pb=2">
+    <div class="col-xs-12 pt-5">
       <a class="btn btn-dark btn-lg position-relative" href="./ichiumaimenu.pdf#toolbar=0&navpanes=0&scrollbar=0" target="_blank" role="button">Food Menu</a>
     </div>
-    <div class="col-xs-12 pt-2 pb-5">
+    <div class="col-xs-12 p-3">
       <a class="btn btn-dark btn-lg position-relative" href="./ichiumaimenu.pdf#toolbar=0&navpanes=0&scrollbar=0" target="_blank" role="button">Yusheng<span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">NEW</span></a>
     </div>
   </div>
