--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <title>Ichi Umai: Best Taste</title>
-  <link rel="shortcut icon" type="image/x-icon" href="ichiumai.ico"/>
+  <link rel="shortcut icon" type="image/x-icon" href="./assets/ico/ichiumai.ico"/>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -16,16 +16,16 @@
 
 <header class="text-center pt-5 pb-3" style="background-color: #353736;">
   <!--<img src="./ichiumai.png" class="img-fluid" alt="ichiumaiLogo" />-->
-  <img src="./ichiumai.png" class="img-fluid" alt="ichiumaiLogo" srcset="./ichiumai.svg" height="305" width="300" />
+  <img src="./assets/logo/ichiumai.png" class="img-fluid" alt="ichiumaiLogo" srcset="./assets/logo/ichiumai.svg" height="305" width="300" />
 </header>
 
 <div class="container-fluid text-center text-white">
   <div class="row">
     <div class="col-xs-12 pt-5">
-      <a class="btn btn-dark btn-lg position-relative" style="width: 100px;" href="./ichiumaimenu.pdf#toolbar=0&navpanes=0&scrollbar=0" target="_blank" role="button">Food Menu</a>
+      <a class="btn btn-dark btn-lg position-relative" style="width: 100px;" href="./assets/pdf/ichiumaimenu.pdf#toolbar=0&navpanes=0&scrollbar=0" target="_blank" role="button">Food Menu</a>
     </div>
     <div class="col-xs-12 p-3 pb-5">
-      <a class="btn btn-dark btn-lg position-relative" style="width: 100px;" href="./yushengposter.pdf#toolbar=0&navpanes=0&scrollbar=0" target="_blank" role="button">Yusheng<span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">NEW</span></a>
+      <a class="btn btn-dark btn-lg position-relative" style="width: 100px;" href="./assets/pdf/yushengposter.pdf#toolbar=0&navpanes=0&scrollbar=0" target="_blank" role="button">Yusheng<span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">NEW</span></a>
     </div>
   </div>
 </div>
