--- a/menu.html
+++ b/menu.html
@@ -13,7 +13,7 @@
 	document.addEventListener("adobe_dc_view_sdk.ready", function(){ 
 		var adobeDCView = new AdobeDC.View({clientId: "5fffd494f8594e3bb0886fb221779c8d", divId: "adobe-dc-view"});
 		adobeDCView.previewFile({
-			content:{location: {url: "https://yeeyonglyy.github.io/ichiumaimenu.pdf"}},
+			content:{location: {url: "https://ichiumai.com/assets/pdf/ichiumaimenu.pdf"}},
 			metaData:{fileName: "ichiumaimenu.pdf"}
 		}, {showAnnotationTools: false, showLeftHandPanel: false, showPageControls: false, showPrintPDF: false});
 	});
