--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
 <div class="container-fluid text-center text-white">
   <div class="row">
     <div class="col-xs-12 pt-5">
-      <a class="btn btn-dark btn-lg position-relative" style="width: 100px;" href="./assets/pdf/ichiumaimenu.pdf#toolbar=0&navpanes=0&scrollbar=0" target="_blank" role="button">Food Menu</a>
+      <a class="btn btn-dark btn-sm position-relative" style="width: 100px;" href="./assets/pdf/ichiumaimenu.pdf#toolbar=0&navpanes=0&scrollbar=0" target="_blank" role="button">Food Menu</a>
     </div>
     <div class="col-xs-12 p-3 pb-5">
-      <a class="btn btn-dark btn-lg position-relative" style="width: 100px;" href="./assets/pdf/yushengposter.pdf#toolbar=0&navpanes=0&scrollbar=0" target="_blank" role="button">Yusheng<span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">NEW</span></a>
+      <a class="btn btn-dark btn-sm position-relative" style="width: 100px;" href="./assets/pdf/yushengposter.pdf#toolbar=0&navpanes=0&scrollbar=0" target="_blank" role="button">Yusheng<span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">NEW</span></a>
     </div>
   </div>
 </div>
 
-<footer class="text-center text-lg-start mt-auto" style="background-color: #353736;">
+<footer class="text-center text-sm-start mt-auto" style="background-color: #353736;">
   <div class="container-fluid text-center text-white">
     <div class="row">
       <div class="col-xs-12">
@@ -44,10 +44,10 @@
     </div>
   </div>
   <div class="container d-flex justify-content-center py-5">
-    <a role="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #ac2bac;" href="https://www.instagram.com/ichi.umai/" target="_blank">
+    <a role="button" class="btn btn-primary btn-sm btn-floating mx-2" style="background-color: #ac2bac;" href="https://www.instagram.com/ichi.umai/" target="_blank">
       <i class="fab fa-instagram"></i>
     </a>
-    <a role="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #3B5998;" href="https://www.facebook.com/ichi.umai" target="_blank">
+    <a role="button" class="btn btn-primary btn-sm btn-floating mx-2" style="background-color: #3B5998;" href="https://www.facebook.com/ichi.umai" target="_blank">
       <i class="fab fa-facebook-f"></i>
     </a>
   </div>
