--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 <div class="container-fluid text-center text-white">
   <div class="row">
     <div class="col-xs-12 pt-5">
-      <a class="btn btn-dark btn-sm position-relative" style="width: 100px;" href="./assets/pdf/ichiumaimenu.pdf#toolbar=0&navpanes=0&scrollbar=0" target="_blank" role="button">Food Menu</a>
+      <a class="btn btn-dark btn-sm position-relative fs-6" style="width: 100px;" href="./assets/pdf/ichiumaimenu.pdf#toolbar=0&navpanes=0&scrollbar=0" target="_blank" role="button">Food Menu</a>
     </div>
     <div class="col-xs-12 p-3 pb-5">
-      <a class="btn btn-dark btn-sm position-relative" style="width: 100px;" href="./assets/pdf/yushengposter.pdf#toolbar=0&navpanes=0&scrollbar=0" target="_blank" role="button">Yusheng<span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">NEW</span></a>
+      <a class="btn btn-dark btn-sm position-relative fs-6" style="width: 100px;" href="./assets/pdf/yushengposter.pdf#toolbar=0&navpanes=0&scrollbar=0" target="_blank" role="button">Yusheng<span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">NEW</span></a>
     </div>
   </div>
 </div>
@@ -36,23 +36,23 @@
   <div class="container-fluid text-center text-white">
     <div class="row">
       <div class="col-xs-12">
-        <h4>Operating hours:</h3>
-        <p>Open daily except every 2nd and 4th Monday of each Month.</p>
-        <p>11:30AM - 3:30PM (Last order: 3PM)</p>
-        <p>5:30PM - 9:30PM (Last order: 9PM)</p>
+        <h4 class="fs-6">Operating hours:</h3>
+        <p class="fs-6">Open daily except every 2nd and 4th Monday of each Month.</p>
+        <p class="fs-6">11:30AM - 3:30PM (Last order: 3PM)</p>
+        <p class="fs-6">5:30PM - 9:30PM (Last order: 9PM)</p>
       </div>
     </div>
   </div>
   <div class="container d-flex justify-content-center py-5">
-    <a role="button" class="btn btn-primary btn-sm btn-floating mx-2" style="background-color: #ac2bac;" href="https://www.instagram.com/ichi.umai/" target="_blank">
+    <a role="button" class="btn btn-primary btn-sm btn-floating mx-2 fs-6" style="background-color: #ac2bac;" href="https://www.instagram.com/ichi.umai/" target="_blank">
       <i class="fab fa-instagram"></i>
     </a>
-    <a role="button" class="btn btn-primary btn-sm btn-floating mx-2" style="background-color: #3B5998;" href="https://www.facebook.com/ichi.umai" target="_blank">
+    <a role="button" class="btn btn-primary btn-sm btn-floating mx-2 fs-6" style="background-color: #3B5998;" href="https://www.facebook.com/ichi.umai" target="_blank">
       <i class="fab fa-facebook-f"></i>
     </a>
   </div>
   
-  <div class="text-center text-white p-3" style="background-color: #353736;">© Copyright 2022 Ichi Umai</div>
+  <div class="text-center text-white p-3 fs-6" style="background-color: #353736;">© Copyright 2022 Ichi Umai</div>
 </footer>
 
 </body>
