--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     <div class="col-xs-12 pt-5">
       <a class="btn btn-dark btn-sm position-relative fs-6" style="width: 100px;" href="./assets/pdf/ichiumaimenu.pdf#toolbar=0&navpanes=0&scrollbar=0" target="_blank" role="button">Food Menu</a>
     </div>
-    <div class="col-xs-12 p-3 pb-5">
+    <!--<div class="col-xs-12 p-3 pb-5">
       <a class="btn btn-dark btn-sm position-relative fs-6" style="width: 100px;" href="./assets/pdf/yushengposter.pdf#toolbar=0&navpanes=0&scrollbar=0" target="_blank" role="button">Yusheng<span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">NEW</span></a>
-    </div>
+    </div>-->
   </div>
 </div>
 
