--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <div class="container-fluid text-center text-white">
   <div class="row">
-    <div class="col-xs-12 pt-5">
+    <div class="col-xs-12 pt-5 pb-5">
       <a class="btn btn-dark btn-sm position-relative fs-6" style="width: 100px;" href="./assets/pdf/ichiumaimenu.pdf#toolbar=0&navpanes=0&scrollbar=0" target="_blank" role="button">Food Menu</a>
     </div>
     <!--<div class="col-xs-12 p-3 pb-5">
