--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="row">
       <div class="col-xs-12">
         <h4 class="fs-6">Operating hours:</h3>
-        <p class="fs-6">Open daily except every 2nd and 4th Monday of each Month.</p>
+        <p class="fs-6">Open daily except every Monday</p>
         <p class="fs-6">11:30AM - 3:30PM (Last order: 3PM)</p>
         <p class="fs-6">5:30PM - 9:30PM (Last order: 9PM)</p>
       </div>
